# scoped_name

./: Cargo.toml  README.rst
old/: lib.rs  name.rs
src/: lib.rs  name.rs  scope.rs
